--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -47,7 +47,7 @@ template(name='user_edit')
                                     +date_view key='expiration_date' label='expiration date' direct=true
                                 +image_view key='lease_agreement_image' label='lease agreement image' direct=true
                         //- +text_edit key='email' label='Email' direct=true
-                        //- +phone_edit key='phone' label='phone' direct=true
+                        +phone_edit key='phone' label='phone' direct=true
                         //- +image_edit key='banner_image_id' label='Banner Image' direct=true
                         //- +text_edit key='tagline' label='tag line' direct=true
                         
