--- a/client/users.jade
+++ b/client/users.jade
@@ -133,7 +133,7 @@ template(name='users')
             .sixteen.wide.column
                 h1.ui.center.aligned.grey.header 
                     +i name='groups'
-                    |users
+                    |Users
                 .ui.left.icon.huge.fluid.input
                     input.username_search(type='text' placeholder='lookup name...')
                 .ui.centered.cards
