--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -51,15 +51,13 @@ template(name='goldrun')
                     .row
                         .sixteen.wide.column
                             h1.ui.center.aligned.header
-                                i.blue.user.shield.icon
                                 |#{checkedin_members.count} checked in members
                             .ui.divided.items
                                 each checkedin_members
                                     .ui.item
-                                        .ui.small.circular.image
-                                            img(src="{{c.url image_id width='290' height='310' crop='lpad'}}")
+                                        img.ui.small.circular.image(src="{{c.url image_id width=200 height=200 gravity='face' crop='fill'}}")
                                         .middle.aligned.content
-                                            .ui.header #{first_name} #{last_name} #{username}
+                                            .ui.header #{first_name} #{last_name}
                                         .extra.middle.aligned.content
                                             .right.floated
                                                 +checkin_button
@@ -247,9 +245,10 @@ template(name='checkin_card')
             .eight.wide.column
                 img.ui.fluid.rounded.image(src="{{c.url user.image_id width=500 height=400 gravity='face' crop='fill'}}")
             .eight.wide.column
-                a.ui.header(href="/user/#{user.username}")
+                //- a.ui.header(href="/user/#{user.username}")
+                .ui.large.header(href="/user/#{user.username}")
                      |#{user.first_name} #{user.last_name} 
-                .meta @#{user.username}
+                //- .meta @#{user.username}
                 //- +array_view key='tags' label='Tags' direct=true
                 if is_admin
                     div #{user.address}
@@ -261,10 +260,14 @@ template(name='checkin_card')
                         strong #{user.lease_expiration}
                 with user
                     +email_validation_check
+                    div
                     +lease_expiration_check
                     +rules_and_regs_check
-                div
-                +checkin_guest
+                .ui.hidden.divider
+                +multi_user_edit key='guests' role_filter='guest' title='check in guest' direct=true
+                .ui.circular.basic.circular.button.add_guest
+                    |add guest
+                    
             .row
                 .two.wide.column
                     .ui.fluid.red.big.button.icon.circular.cancel_checkin
@@ -273,22 +276,27 @@ template(name='checkin_card')
                     .ui.fluid.green.big.button.circular.complete_checkin
                         |complete check in
                         i.right.chevron.icon
-                
+            .ui.fullscreen.modal
+                .header
+                    .scrolling.content
+                        +document_view key='guest_waiver'
+
+
+
 
 template(name='checkin_guest')                
-    .ui.big.circular.compact.button.checkin_guest(class="{{#if $.Session.get 'checking_in_guest'}} blue {{else}} basic {{/if}}")
-        //- i.user.plus.icon
-        +i name='badge' classes='ui inline image'
-        |check in guest
-    if checking_in_guest
-        .ui.header last guest
-        .ui.header frequent guests
-        each guests
-            div
-            img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-            .ui.small.inline.header #{first_name} #{last_name}
-        .ui.header select other 
-        with checking_in_doc    
-            +multi_user_edit key='guests' role_filter='guest' direct=true
+    //- .ui.big.circular.compact.button.checkin_guest(class="{{#if $.Session.get 'checking_in_guest'}} blue {{else}} basic {{/if}}")
+    //-     //- i.user.plus.icon
+    //-     +ismall name='badge' classes='ui inline image'
+    //-     |check in guest
+    //- if checking_in_guest
+        //- .ui.header last guest
+        //- .ui.header frequent guests
+        //- each guests
+        //-     div
+        //-     img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+        //-     .ui.small.inline.header #{first_name} #{last_name}
+        //- .ui.header select other 
+    //- with checking_in_doc    
         
             
