--- a/client/styles.css
+++ b/client/styles.css
@@ -16,8 +16,8 @@ body {
 }
 
 .yellow_flagged {
-  border: 10px solid yellow;
-  border-radius: 5px;
+  border: 10px solid orange !important;
+  border-radius: 5px !important;
 }
 
 .green_flagged {
