--- a/client/styles.css
+++ b/client/styles.css
@@ -9,9 +9,9 @@ body {
 }
 
 .red_flagged {
-  border: 10px solid red;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgb(220,20,60, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 10px solid red !important;
+  border-radius: 5px !important;
+  box-shadow: 0 4px 8px 0 rgb(220,20,60, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 
 }
 
